# discord-py-test

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml  docs.yml  dpy-master.yml  release.yml
changes/: +assert-helpers.feature.md  +automod-mention-spam.feature.md  +backend-decomposition.misc.md  +command-permissions.feature.md  +context-menu-spaces.bugfix.md  +create-guild-id.feature.md  +event-auto-activation.feature.md  +fetch-members.feature.md  +marker-docs.doc.md  +overwrite-type-enum.misc.md  +simcord-marker.feature.md  +voice-state-edit.feature.md  +wire-enums.misc.md  README.md  drop-multibot.misc.md  expressions-stage.feature.md  thread-completeness.feature.md
docs/: api.md  architecture.md  faq.md  index.md  parity-matrix.md
docs/guides/: diagnostics.md  fixtures.md  moderation-and-guild.md
examples/: test_bot.py
src/discord_py_test/: __init__.py  _dpy_internals.py  actors.py  backend.py  builders.py  env.py  errors.py  gateway.py  handles.py  http.py  interactions.py  pytest_plugin.py  results.py  routes.py
src/simcord/: __init__.py  actors.py  builders.py  enums.py  env.py  interactions.py  pytest_plugin.py
tests/: conftest.py  test_interactions.py  test_messages.py
tests/integration/: test_app_commands.py  test_application_emojis.py  test_asserts.py  test_automod.py  test_channels.py  test_command_permissions.py  test_interactions.py  test_lifecycle.py  test_members.py  test_messages.py  test_polls.py  test_scheduled_events.py  test_stage_instances.py  (+2 more)
(+58 files in other folders)
